--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -16,5 +16,6 @@ pipelines:
           - go get -v
           - go build -v
           - cd "${PACKAGE_PATH}"
+          - go get -v
           - go install -v
 #          - go test -v
